// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonLink no user account 1`] = `
<DocumentFragment>
  <span
    class="a"
  >
    alice
  </span>
</DocumentFragment>
`;

exports[`PersonLink with user account 1`] = `
<DocumentFragment>
  <a
    class="a b"
    href="u"
  >
    alice
  </a>
</DocumentFragment>
`;
